trustfall_core/test_data/tests/valid_queries/empty_fold_output.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Zero {
        value @output

        multiple(max: 10) @fold {
            mult: value @output
        }
    }
}"#,
    arguments: {},
)
