trustfall_core/test_data/tests/parse_errors/duplicate_edge_parameter.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 5, max: 10) {
        value @output
    }
}"#,
    arguments: {},
)
